less/contact.less
// Grey box container surrounding the contact form
.contact-container {
    width: 60%;
    background-color: @bggrey;
    border: 2px solid @bordergrey;
    padding: 2%;
    margin: 5% auto;
    margin-bottom: 10%;
    border-radius: 10px;
    @media @mobile {
        width: 90%;
        box-shadow: 0 2px 2px rgba(black, 0.1);
    }
    @media @tablet {
        width: 90%;
        box-shadow: 0 2px 2px rgba(black, 0.1);
    }
}

// Contact form inner stylizing
form {
    // max-width: 800px;
    text-align: center;
    margin: 20px auto;
    padding-bottom: 1%;
    input, textarea {
        border: 1px solid @bordergrey;
        outline:0;
        padding: 1em;
        border-radius: 8px;
        display: block;
        width: 100%;
        height: 48px;
        font-family: 'Varela Round', sans-serif;
        font-size: 1.5rem;
        box-shadow: 0 2px 2px rgba(black, 0.1);
        resize: none;
        &:focus {
        box-shadow: 0 0px 3px rgba(@darker, 1);
        }
        @media @mobile {
            font-size: 1.25rem;
        }
    }
    .input-box {
        margin-bottom: 3px;
    }
    #input-submit {
        color: white; 
        background: @darker;
        height: 50px;
        padding-top: 2.5%;
        cursor: pointer;
        &:hover {
            background-color: @hacker;
            box-shadow: 0 2px 2px 2px rgba(#aaa, 0.6); 
        }
    }
    textarea {
        height: 150px;
    }
}

.half {
float: left;
width: 48%;
margin-bottom: 1em;
}

.right {
    width: 50%; 
}
.left {
    margin-right: 2%; 
}

@media @mobile {
    width: 100%;
    .half {
        width: 100%; 
        float: none;
        margin-bottom: 0; 
    }
}

/* Clearfix */
.cf:before,
.cf:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}
.cf:after {
    clear: both;
}

